[tool.poetry]
name = "nnio"
version = "0.4.0"
description = "Neural network inference on accelerators simplified"
authors = ["Ruslan Baynazarov <ruslan.baynazarov@fastsense.tech>"]
packages = [{include = "nnio"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
opencv-python = "^4.8.0.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
